fix annoying spacing stuff

--- a/docs/frontend/styles/overrides/rhino-editor.css
+++ b/docs/frontend/styles/overrides/rhino-editor.css
@@ -1,5 +1,5 @@
 .rhino-editor {
   position: relative;
-  margin: 1rem;
+  margin: 1rem 0rem;
 }
 
